--- a/cart.html
+++ b/cart.html
@@ -14,7 +14,7 @@
 
 <body>
   <div class="alert alert-success alert-dismissible show d-none alert-front" id="success-alert" role="alert">
-    Se ha confirmado su compra.
+    Se ha confirmado tu compra.
     <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
   </div>
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark p-1">
@@ -105,17 +105,17 @@
               <div class="d-flex flex-wrap">
                 <div class="col-6 mb-3">
                   <p>Calle</p>
-                  <input type="text" class="cart-adress-input" required>
+                  <input type="text" class="medium-input" required>
                   <div class="invalid-feedback">Ingresa una calle</div>
                 </div>
                 <div class="col-6 mb-3">
                   <p>Número</p>
-                  <input type="text" class="cart-adress-input" required>
+                  <input type="text" class="medium-input" required>
                   <div class="invalid-feedback">Ingresa un número</div>
                 </div>
                 <div class="col-6 mb-3">
                   <p>Esquina</p>
-                  <input type="text" class="cart-adress-input" required>
+                  <input type="text" class="medium-input" required>
                   <div class="invalid-feedback">Ingresa una esquina</div>
                 </div>
               </div>
