--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
     <h2>Inicio de sesión</h2>
     <div class="container">
       <p>Email</p>
-      <input type="email" id="input-email"/>
+      <input type="email" id="input-email" required/>
       <p style="color:red" id="email-error"></p>
       <p>Contraseña</p>
-      <input type="password" id="input-password"/>
+      <input type="password" id="input-password" required/>
       <p style="color:red" id="password-error"></p>
       <br>
       <input type="button" id="input-ingresar" value="Ingresar">
