--- a/product-info.html
+++ b/product-info.html
@@ -56,7 +56,7 @@
   <main>
     <div class="container">
       <!-- Lugar para mostrar lista -->
-      <h2 class="título-producto" id="product-name">Vuelva al listado de productos y seleccione uno.</h2>
+      <h2 class="titulo" id="product-name">Vuelva al listado de productos y seleccione uno.</h2>
       <!-- Le di margen con css con su id-->
       <hr>
       <div class="btn-cart flex-end">
@@ -99,10 +99,10 @@
         </button>
       </div>
       <!-- Fin carrusel -->
-      <h2 class="título-producto">Comentarios</h2>
+      <h2 class="titulo">Comentarios</h2>
       <div id="comentarios">
       </div>
-      <h2 class="título-producto">Comentar</h2> <!-- Nuevo comentario -->
+      <h2 class="titulo">Comentar</h2> <!-- Nuevo comentario -->
       <p>Tu opinión</p>
       <textarea id="new-commentary-text"></textarea> <!-- Texto del comentario -->
       <p>Tu puntuación</p>
@@ -117,7 +117,7 @@
       <br>
       <button class="btn btn-primary mt-2" id="send-new-commentary">Enviar</button> <!-- Botón de envío -->
       <hr>
-      <h2 class="título-producto">Productos relacionados</h2>
+      <h2 class="titulo">Productos relacionados</h2>
       <div id="product-related" class="div-imagenes-horizontal">
         <p>No hay productos relacionados que mostrar.</p> <!-- Productos relacionados -->
       </div>
