--- a/my-profile.html
+++ b/my-profile.html
@@ -27,6 +27,10 @@
 </head>
 
 <body>
+  <div class="alert alert-success alert-dismissible show d-none alert-front" id="success-alert" role="alert">
+    Se han actualizado tus datos.
+    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+  </div>
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark p-1">
     <div class="container">
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -45,12 +49,15 @@
             <a class="nav-link" href="sell.html">Vender</a>
           </li>
           <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle active" href="#" id="usuario-ingresado" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            <a class="nav-link dropdown-toggle active" href="#" id="usuario-ingresado" role="button"
+              data-bs-toggle="dropdown" aria-expanded="false">
             </a>
             <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="navbarDarkDropdownMenuLink">
               <li><a class="dropdown-item" href="cart.html">Mi carrito</a></li>
               <li><a class="dropdown-item" href="my-profile.html">Mi perfil</a></li>
-              <li><hr class="dropdown-divider"></li>
+              <li>
+                <hr class="dropdown-divider">
+              </li>
               <li><a id="log-out" class="dropdown-item" href="index.html">Cerrar sesión</a></li>
             </ul>
           </li>
@@ -59,11 +66,49 @@
     </div>
   </nav>
   <main>
-    <div class="container">
-      <div class="alert alert-danger text-center" role="alert">
-        <h4 class="alert-heading">Funcionalidad en desarrollo</h4>
+    <div class="container form">
+      <div>
+        <form id="form-perfil" class="needs-validation" novalidate>
+          <h2 class="titulo mb-5">Perfil</h2>
+          <hr>
+          <div class="d-flex flex-wrap">
+            <div class="input-user">
+              <p class="mb-0 mt-2">Primer nombre*</p>
+              <input id="nombre1" class="medium-input" type="text" required></input>
+              <div class="invalid-feedback">Ingresa tu nombre</div>
+            </div>
+            <div class="input-user">
+              <p class="mb-0 mt-2">Segundo nombre</p>
+              <input id="nombre2" class="medium-input" type="text"></input>
+            </div>
+            <div class="input-user">
+              <p class="mb-0 mt-2">Primer apellido*</p>
+              <input id="apellido1" class="medium-input" type="text" required></input>
+              <div class="invalid-feedback">Ingresa tu apellido</div>
+            </div>
+            <div class="input-user">
+              <p class="mb-0 mt-2">Segundo apellido</p>
+              <input id="apellido2" class="medium-input" type="text"></input>
+            </div>
+            <div class="input-user">
+              <p class="mb-0 mt-2">E-mail*</p>
+              <input id="correo" class="medium-input" type="email" required></input>
+              <div class="invalid-feedback">Ingresa tu e-mail</div>
+            </div>
+            <div class="input-user">
+              <p class="mb-0 mt-2">Teléfono de contacto</p>
+              <input id="telefono" class="medium-input" type="text"></input>
+            </div>
+
+          </div>
+          <hr>
+          <div>
+            <button class="btn btn-primary mt-4" type="submit">Guardar cambios</button>
+          </div>
+        </form>
       </div>
     </div>
+    <hr>
   </main>
   <footer class="text-muted">
     <div class="container">
