--- a/index.html
+++ b/index.html
@@ -18,16 +18,17 @@
 
 <body>
   <main class="mt-5" style="text-align:center">
+    <img src="img/login.png" style="height: 150px">
     <h2>Inicio de sesión</h2>
     <div class="container">
       <p>Email</p>
-      <input type="email" id="input-email" required/>
+      <input type="email" id="input-email" class="form-control login-input" required/>
       <p style="color:red" id="email-error"></p>
       <p>Contraseña</p>
-      <input type="password" id="input-password" required/>
+      <input type="password" id="input-password" class="form-control login-input" required/>
       <p style="color:red" id="password-error"></p>
       <br>
-      <input type="button" id="input-ingresar" value="Ingresar">
+      <input type="button" id="input-ingresar" value="Ingresar" class="btn btn-primary">
     </div>
   </main>
   <footer class="text-muted">
